[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Objects/GameObjects/EnemySpawner/EnemySpawner.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
resource_local_to_scene = true
extents = Vector3( 1, 0.1, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0.796078, 0.572549, 0.219608, 0.533333 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 2, 0.1, 2 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.443879, 0.259667, 0.191447 )

[node name="EnemySpawner" type="KinematicBody"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Position" type="Position3D" parent="."]

[node name="SpawnArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SpawnArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 1 )

[node name="DebugMesh" type="MeshInstance" parent="SpawnArea/CollisionShape"]
transform = Transform( 0.9, 0, 0, 0, 1, 0, 0, 0, 0.9, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.819561, 0 )
shape = SubResource( 4 )
